--- a/index.html
+++ b/index.html
@@ -42,19 +42,24 @@
 
 
                     <li class="nav-item">
-                        <a href="#home" class="nav-link  text-truncate"><span class="ms-1 text-container ">Home</span></a>
+                        <a href="#home" class="nav-link  text-truncate"><span
+                                class="ms-1 text-container ">Home</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="#about" class="nav-link  text-truncate"><span class="ms-1 text-container ">About</span></a>
+                        <a href="#about" class="nav-link  text-truncate"><span
+                                class="ms-1 text-container ">About</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="#skills" class="nav-link  text-truncate"><span class="ms-1 text-container ">Skills</span></a>
+                        <a href="#skills" class="nav-link  text-truncate"><span
+                                class="ms-1 text-container ">Skills</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="#work" class="nav-link  text-truncate"><span class="ms-1 text-container ">Work</span></a>
+                        <a href="#work" class="nav-link  text-truncate"><span
+                                class="ms-1 text-container ">Work</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="#contact" class="nav-link  text-truncate"><span class="ms-1 text-container ">Contact</span></a>
+                        <a href="#contact" class="nav-link  text-truncate"><span
+                                class="ms-1 text-container ">Contact</span></a>
                     </li>
                 </div>
             </div>
@@ -73,9 +78,11 @@
             </div>
 
             <div class="home__social">
-                <a href="https://www.linkedin.com/in/marija-p-b23912167/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                <a href="https://dribbble.com/marijapopeska" class="home__social-icon"><i class='bx bxl-dribbble'></i></a>
-                <a href="" class="home__social-icon"><i class='bx bxl-github'></i></a>
+                <a href="https://www.linkedin.com/in/marija-p-b23912167/" class="home__social-icon"><i
+                        class='bx bxl-linkedin'></i></a>
+                <a href="https://dribbble.com/marijapopeska" class="home__social-icon"><i
+                        class='bx bxl-dribbble'></i></a>
+                <a href="https://github.com/marijapopeska" class="home__social-icon"><i class='bx bxl-github'></i></a>
             </div>
 
 
@@ -172,14 +179,17 @@
             <h2 class="section-title">Work</h2>
 
             <div class="work__container bd-grid">
-                <a href="" class="work__img">
+                <a href="https://www.figma.com/file/QUAG08Wkymc4M9s61ckA2n/Grocery-app" class="work__img">
                     <img src="assets/img/Grocery app.png" alt="">
+                    <span class="btn-secondary">Open link </span>
                 </a>
-                <a href="" class="work__img">
+                <a href="https://www.figma.com/file/n94A8ZMo2wOdsjfmxVKSyS/Nike-mobile-app" class="work__img">
                     <img src="assets/img/Nike app.png" alt="">
+                    <span class="btn-secondary">Open link </span>
                 </a>
-                <a href="" class="work__img">
+                <a href="https://www.figma.com/file/vzxhWNI5eujkMBjea73y8w/Magazine" class="work__img">
                     <img src="assets/img/domus magazine -2.png" alt="">
+                    <span class="btn-secondary">Open link </span>
                 </a>
 
             </div>
@@ -219,14 +229,16 @@
             </div>
         </section>
 
+        
+
         <!--===== CONTACT =====-->
         <section class="contact section" id="contact">
             <h2 class="section-title">Contact</h2>
 
             <div class="contact__container bd-grid">
-                <form action="" class="contact__form">
+                <form action="https://formsubmit.co/marija.popeska@gmail.com" class="contact__form" method="POST">
                     <input type="text" placeholder="Name..." class="contact__input">
-                    <input type="mail" placeholder="Email..." class="contact__input">
+                    <input type="mail" placeholder="Email..." class="contact__input" src="">
                     <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
                     <input type="button" value="Submit" class="contact__button button">
 
@@ -253,7 +265,7 @@
 
     <!--===== MAIN JS =====-->
     <script src="assets/js/main.js"></script>
-    
+
     <!--===== BOOTSTRAP JS =====-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
