Add_Figma_links

--- a/index.html
+++ b/index.html
@@ -179,19 +179,20 @@
             <h2 class="section-title">Work</h2>
 
             <div class="work__container bd-grid">
-                <a href="https://www.figma.com/file/QUAG08Wkymc4M9s61ckA2n/Grocery-app" class="work__img">
-                    <img src="assets/img/Grocery app.png" alt="">
-                    <span class="btn-secondary">Open link </span>
-                </a>
-                <a href="https://www.figma.com/file/n94A8ZMo2wOdsjfmxVKSyS/Nike-mobile-app" class="work__img">
-                    <img src="assets/img/Nike app.png" alt="">
-                    <span class="btn-secondary">Open link </span>
-                </a>
-                <a href="https://www.figma.com/file/vzxhWNI5eujkMBjea73y8w/Magazine" class="work__img">
-                    <img src="assets/img/domus magazine -2.png" alt="">
-                    <span class="btn-secondary">Open link </span>
-                </a>
+                <div class="work__img">
+                    <img src="assets/img/Grocery app.png" alt="Grocery_app">
+                    <a href="https://www.figma.com/file/QUAG08Wkymc4M9s61ckA2n/Grocery-app" class="home__social-icon"><iconify-icon icon="logos:figma"></iconify-icon></a>
+                </div>
 
+                <div class="work__img">
+                    <img src="assets/img/Nike app.png" alt="Nike_app">
+                    <a href="https://www.figma.com/file/n94A8ZMo2wOdsjfmxVKSyS/Nike-mobile-app" class="home__social-icon"><iconify-icon icon="logos:figma"></iconify-icon></a>
+                </div>
+                
+                <div class="work__img">
+                    <img src="assets/img/domus magazine -2.png" alt="Domus_magazine">
+                    <a href="https://www.figma.com/file/vzxhWNI5eujkMBjea73y8w/Magazine" class="home__social-icon"><iconify-icon icon="logos:figma"></iconify-icon></a>
+                </div>
             </div>
         </section>
 
