--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
             <div class="home__data">
                 <h1 class="home__title">Hello,<br>I'am <span class="home__title-color">Marija Popeska</span><br>
-                    UX/UI Designer</h1>
+                    Frontend Developer</h1>
 
                 <a href="#" class="button">Contact</a>
             </div>
@@ -154,8 +154,8 @@
 
                     <div class="skills__data">
                         <div class="skills__names">
-                            <iconify-icon icon="file-icons:adobe-photoshop" class="skills__icon"></iconify-icon>
-                            <span class="skills__name">PS</span>
+                             <i class='bx bxl-javascript skills__icon'></i>
+                            <span class="skills__name">JavaScript</span>
                         </div>
                     </div>
 
