--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                 <div class="about__text">
                     <h2 class="about__subtitle">I'am Marija</h2>
                     <p class="about__text">Master of Architecture and interior designing, after 4 years experience as an
-                        architect I
-                        transitioned to UI/UX designer and was completely self-directed because I found
+                        argitchitect I
+                        transitioned to Frontend Developer and was completely self-directed because I found
                         many similarities.
                         <br>Architects strive to design functional and aesthetically pleasing spaces in ways that make
                         their
@@ -147,15 +147,15 @@
 
                     <div class="skills__data">
                         <div class="skills__names">
-                            <iconify-icon icon="file-icons:adobe-illustrator" class="skills__icon"></iconify-icon>
-                            <span class="skills__name">Ai</span>
+                             <i class='bx bxl-javascript skills__icon'></i>
+                            <span class="skills__name">JavaScript</span>
                         </div>
                     </div>
 
                     <div class="skills__data">
                         <div class="skills__names">
-                             <i class='bx bxl-javascript skills__icon'></i>
-                            <span class="skills__name">JavaScript</span>
+                            <iconify-icon icon="file-icons:adobe-illustrator" class="skills__icon"></iconify-icon>
+                            <span class="skills__name">Ai</span>
                         </div>
                     </div>
 
