--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
 
                     <div class="skills__data">
                         <div class="skills__names">
-                            <iconify-icon icon="file-icons:adobe-illustrator" class="skills__icon"></iconify-icon>
-                            <span class="skills__name">Ai</span>
+                            <i class='bx bxl-react skills__icon'></i>
+                            <span class="skills__name">React</span>
                         </div>
                     </div>
 
