addition in the work section

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
             <div class="about__container bd-grid">
                 <div class="about__img">
-                    <img src="assets/img/img 3 black and white.png" alt="">
+                    <img src="assets/img/Frame 1.jpg" alt="">
                 </div>
 
                 <div class="about__text">
@@ -147,7 +147,7 @@
 
                     <div class="skills__data">
                         <div class="skills__names">
-                             <i class='bx bxl-javascript skills__icon'></i>
+                            <i class='bx bxl-javascript skills__icon'></i>
                             <span class="skills__name">JavaScript</span>
                         </div>
                     </div>
@@ -180,21 +180,69 @@
 
             <div class="work__container bd-grid">
                 <div class="work__img">
-                    <img src="assets/img/Grocery app.png" alt="Grocery_app">
-                    <a href="https://www.figma.com/file/QUAG08Wkymc4M9s61ckA2n/Grocery-app" class="home__social-icon"><iconify-icon icon="logos:figma"></iconify-icon></a>
+                    <img src="assets/img/CV.jpg" alt="Domus_magazine">
+                    <a href="https://www.figma.com/file/OROAyWx1RW5XGhKgfZKfJq/CV-Marija-Popeska?type=design&node-id=0%3A1&mode=design&t=w2JjjCUtIZEPv1Go-1"
+                        class="home__social-icon"><iconify-icon icon="logos:figma"></iconify-icon></a>
                 </div>
 
                 <div class="work__img">
-                    <img src="assets/img/Nike app.png" alt="Nike_app">
-                    <a href="https://www.figma.com/file/n94A8ZMo2wOdsjfmxVKSyS/Nike-mobile-app" class="home__social-icon"><iconify-icon icon="logos:figma"></iconify-icon></a>
-                </div>
-                
-                <div class="work__img">
                     <img src="assets/img/domus magazine -2.png" alt="Domus_magazine">
-                    <a href="https://www.figma.com/file/vzxhWNI5eujkMBjea73y8w/Magazine" class="home__social-icon"><iconify-icon icon="logos:figma"></iconify-icon></a>
+
+                    <span class="icon-container">
+                        <a href="https://www.figma.com/file/vzxhWNI5eujkMBjea73y8w/Magazine" class="home__social-icon">
+                            <iconify-icon icon="logos:figma"></iconify-icon>
+                        </a>
+                    </span>
+
+                    <span class="icon-container">
+                        <a href="https://github.com/marijapopeska/Magazine_home_page.git" class="home__social-icon">
+                            <i class='bx bxl-github'></i>
+                        </a>
+                    </span>
+                </div>
+
+                <div class="work__img height">
+                    <img src="assets/img/grocery app.jpg" alt="Grocery_app">
+                    <a href="https://www.figma.com/file/QUAG08Wkymc4M9s61ckA2n/Grocery-app"
+                        class="home__social-icon"><iconify-icon icon="logos:figma"></iconify-icon></a>
+                </div>
+
+                <div class="work__img">
+                    <img src="assets/img/Nike.jpg" alt="Nike_app">
+                    <a href="https://www.figma.com/file/n94A8ZMo2wOdsjfmxVKSyS/Nike-mobile-app"
+                        class="home__social-icon"><iconify-icon icon="logos:figma"></iconify-icon></a>
+                </div>
+
+
+                <div class="work__img">
+                    <img src="assets/img/movie.jpg" alt="Movie app">
+                    <a href="https://www.figma.com/file/u6L9r20XTE9HVRLWDdfkyg/CINEVERSE?type=design&node-id=11%3A1833&mode=design&t=w2JjjCUtIZEPv1Go-1"
+                        class="home__social-icon"><iconify-icon icon="logos:figma"></iconify-icon></a>
+                </div>
+
+                <div class="work__img">
+                    <img src="assets/img/Menu.jpg" alt="Menu">
+                    <a href="https://github.com/marijapopeska/Menu_JS.git" class="home__social-icon"><i
+                            class='bx bxl-github'></i></a>
                 </div>
             </div>
+
+
         </section>
+
+        <div class="gif-grid">
+            <div class="work__img size">
+                <img src="assets/img/Magazine.gif" alt="Magazine">
+                <a href="https://github.com/marijapopeska/Homepage-website.git" class="home__social-icon"><i
+                        class='bx bxl-github'></i></a>
+            </div>
+
+            <div class="work__img">
+                <img src="assets/img/vertical_slider.gif" alt="Vertical slider">
+                <a href="https://github.com/marijapopeska/Double_vertical_slider.git" class="home__social-icon"><i
+                        class='bx bxl-github'></i></a>
+            </div>
+        </div>
 
         <!--===== Hobbies =====-->
         <section class="hobbies section" id="hobby">
@@ -230,7 +278,7 @@
             </div>
         </section>
 
-        
+
 
         <!--===== CONTACT =====-->
         <section class="contact section" id="contact">
