--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
                 <a href="https://github.com/marijapopeska" class="home__social-icon"><i class='bx bxl-github'></i></a>
             </div>
 
-
             <div class="home__img">
                 <img src="assets/img/home profile picture.png" alt="">
                 </svg>
@@ -159,7 +158,6 @@
                         </div>
                     </div>
 
-
                     <div class="skills__data">
                         <div class="skills__names">
                             <i class='bx bxs-paint skills__icon'></i>
@@ -213,10 +211,15 @@
                         class="home__social-icon"><iconify-icon icon="logos:figma"></iconify-icon></a>
                 </div>
 
-
                 <div class="work__img">
                     <img src="assets/img/movie.jpg" alt="Movie app">
                     <a href="https://www.figma.com/file/u6L9r20XTE9HVRLWDdfkyg/CINEVERSE?type=design&node-id=11%3A1833&mode=design&t=w2JjjCUtIZEPv1Go-1"
+                        class="home__social-icon"><iconify-icon icon="logos:figma"></iconify-icon></a>
+                </div>
+
+                <div class="work__img">
+                    <img src="assets/img/hiking-club.jpg" alt="Movie app">
+                    <a href="https://www.figma.com/file/bz0gC3ibsgktoB2vcl61fj/Dipsakus-hiking-club?type=design&node-id=0%3A1&mode=design&t=fmnPfTXhOeFQmZKQ-1"
                         class="home__social-icon"><iconify-icon icon="logos:figma"></iconify-icon></a>
                 </div>
 
@@ -225,8 +228,8 @@
                     <a href="https://github.com/marijapopeska/Menu_JS.git" class="home__social-icon"><i
                             class='bx bxl-github'></i></a>
                 </div>
-            </div>
 
+            </div>
 
         </section>
 
@@ -274,7 +277,6 @@
                     <span class="hobby_size">3D Visualizations</span>
                 </div>
 
-
             </div>
         </section>
 
@@ -290,13 +292,10 @@
                     <input type="mail" placeholder="Email..." class="contact__input" src="">
                     <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
                     <input type="button" value="Submit" class="contact__button button">
-
                 </form>
             </div>
         </section>
     </main>
-
-
 
     <!--===== FOOTER =====-->
     <footer class="footer">
@@ -304,10 +303,10 @@
         <div class="footer__social">
             <a href="https://www.facebook.com/popeskamarija/" class="footer__icon"><i class='bx bxl-facebook'></i></a>
             <a href="https://www.instagram.com/popeskamarija/" class="footer__icon"><i class='bx bxl-instagram'></i></a>
-            <a href="#" class="footer__icon"><i class='bx bxl-twitter'></i></a>
+            <a href="https://www.linkedin.com/in/marija-p-b23912167/" class="footer__icon"><i
+                    class='bx bxl-linkedin'></i></a>
         </div>
     </footer>
-
 
     <!--===== SCROLL REVEAL =====-->
     <script src="https://unpkg.com/scrollreveal"></script>
