--- a/index.html
+++ b/index.html
@@ -199,6 +199,26 @@
                     </span>
                 </div>
 
+                <div class="work__img">
+                    <img src="assets/img/hiking-club.jpg" alt="hiking-club">
+
+                    <span class="icon-container">
+                        <a href="https://www.figma.com/file/bz0gC3ibsgktoB2vcl61fj/Dipsakus-hiking-club?type=design&node-id=0%3A1&mode=design&t=fmnPfTXhOeFQmZKQ-1"
+                            class="home__social-icon">
+                            <iconify-icon icon="logos:figma"></iconify-icon>
+                        </a>
+                    </span>
+
+                    <span class="icon-container">
+                        <a href="https://dipsakus.mk" class="home__social-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
+                                <path
+                                    d="M440-280H280q-83 0-141.5-58.5T80-480q0-83 58.5-141.5T280-680h160v80H280q-50 0-85 35t-35 85q0 50 35 85t85 35h160v80ZM320-440v-80h320v80H320Zm200 160v-80h160q50 0 85-35t35-85q0-50-35-85t-85-35H520v-80h160q83 0 141.5 58.5T880-480q0 83-58.5 141.5T680-280H520Z" />
+                            </svg>
+                        </a>
+                    </span>
+                </div>
+
                 <div class="work__img height">
                     <img src="assets/img/grocery app.jpg" alt="Grocery_app">
                     <a href="https://www.figma.com/file/QUAG08Wkymc4M9s61ckA2n/Grocery-app"
@@ -214,12 +234,6 @@
                 <div class="work__img">
                     <img src="assets/img/movie.jpg" alt="Movie app">
                     <a href="https://www.figma.com/file/u6L9r20XTE9HVRLWDdfkyg/CINEVERSE?type=design&node-id=11%3A1833&mode=design&t=w2JjjCUtIZEPv1Go-1"
-                        class="home__social-icon"><iconify-icon icon="logos:figma"></iconify-icon></a>
-                </div>
-
-                <div class="work__img">
-                    <img src="assets/img/hiking-club.jpg" alt="Movie app">
-                    <a href="https://www.figma.com/file/bz0gC3ibsgktoB2vcl61fj/Dipsakus-hiking-club?type=design&node-id=0%3A1&mode=design&t=fmnPfTXhOeFQmZKQ-1"
                         class="home__social-icon"><iconify-icon icon="logos:figma"></iconify-icon></a>
                 </div>
 
