--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </div>
                 <div class="order-1 md:order-2 h-[300px] md:h-[600px]">
                     <img class="rounded-[3rem] max-sm:rounded-[2rem] object-cover h-full w-full"
-                        src="./assets/img/img-marija.jpg" alt="" />
+                        src="./assets/img/img-profile.jpg" alt="" />
                 </div>
             </div>
         </div>
@@ -253,34 +253,6 @@
             <div
                 class="shadow-xl hover:scale-105 hover:ease-in-out hover:duration-500 rounded-xl p-6 flex flex-col justify-between">
                 <div class="mb-6">
-                    <img class="w-full rounded-xl h-full object-cover overflow-hidden" src="./assets/img/img-cv.jpg"
-                        alt="">
-                </div>
-                <a
-                    href="https://www.figma.com/file/OROAyWx1RW5XGhKgfZKfJq/CV-Marija-Popeska?type=design&node-id=0%3A1&mode=design&t=w2JjjCUtIZEPv1Go-1">
-                    <span class="w-6">
-                        <svg width="30" height="30" viewBox="0 0 385 494" fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <rect width="154" height="153" rx="74.5" transform="matrix(-1 0 0 1 385 0)"
-                                fill="#FF8181" />
-                            <rect width="154" height="153" rx="74.5" transform="matrix(-1 0 0 1 352 153)"
-                                fill="#00D1FF" />
-                            <rect width="192" height="188" rx="94" transform="matrix(-1 0 0 1 198 306)"
-                                fill="#00FF19" />
-                            <rect width="103" height="107" transform="matrix(-1 0 0 1 198 306)" fill="#00FF19" />
-                            <rect width="154" height="153" rx="74.5" fill="#FF3939" />
-                            <rect y="153" width="154" height="153" rx="74.5" fill="#AD00FF" />
-                            <rect width="111" height="153" transform="matrix(-1 0 0 1 309 0)" fill="#FF8181" />
-                            <rect x="76" width="122" height="153" fill="#FF3939" />
-                            <rect x="76" y="153" width="122" height="153" fill="#AD00FF" />
-                        </svg>
-                    </span>
-                </a>
-            </div>
-
-            <div
-                class="shadow-xl hover:scale-105 hover:ease-in-out hover:duration-500 rounded-xl p-6 flex flex-col justify-between">
-                <div class="mb-6">
                     <img class="w-full rounded-xl h-full object-cover overflow-hidden"
                         src="./assets/img/img-dipsakus.jpg" alt="">
                 </div>
@@ -320,25 +292,31 @@
                     <img class="w-full rounded-xl h-full object-cover overflow-hidden" src="./assets/img/img-domus.jpg"
                         alt="">
                 </div>
-                <a href="https://www.figma.com/file/vzxhWNI5eujkMBjea73y8w/Magazine">
-                    <span class="w-6">
-                        <svg width="30" height="30" viewBox="0 0 385 494" fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <rect width="154" height="153" rx="74.5" transform="matrix(-1 0 0 1 385 0)"
-                                fill="#FF8181" />
-                            <rect width="154" height="153" rx="74.5" transform="matrix(-1 0 0 1 352 153)"
-                                fill="#00D1FF" />
-                            <rect width="192" height="188" rx="94" transform="matrix(-1 0 0 1 198 306)"
-                                fill="#00FF19" />
-                            <rect width="103" height="107" transform="matrix(-1 0 0 1 198 306)" fill="#00FF19" />
-                            <rect width="154" height="153" rx="74.5" fill="#FF3939" />
-                            <rect y="153" width="154" height="153" rx="74.5" fill="#AD00FF" />
-                            <rect width="111" height="153" transform="matrix(-1 0 0 1 309 0)" fill="#FF8181" />
-                            <rect x="76" width="122" height="153" fill="#FF3939" />
-                            <rect x="76" y="153" width="122" height="153" fill="#AD00FF" />
-                        </svg>
-                    </span>
-                </a>
+                <div class="flex gap-6">
+                    <a href="https://www.figma.com/file/vzxhWNI5eujkMBjea73y8w/Magazine">
+                        <span class="w-6">
+                            <svg width="30" height="30" viewBox="0 0 385 494" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <rect width="154" height="153" rx="74.5" transform="matrix(-1 0 0 1 385 0)"
+                                    fill="#FF8181" />
+                                <rect width="154" height="153" rx="74.5" transform="matrix(-1 0 0 1 352 153)"
+                                    fill="#00D1FF" />
+                                <rect width="192" height="188" rx="94" transform="matrix(-1 0 0 1 198 306)"
+                                    fill="#00FF19" />
+                                <rect width="103" height="107" transform="matrix(-1 0 0 1 198 306)" fill="#00FF19" />
+                                <rect width="154" height="153" rx="74.5" fill="#FF3939" />
+                                <rect y="153" width="154" height="153" rx="74.5" fill="#AD00FF" />
+                                <rect width="111" height="153" transform="matrix(-1 0 0 1 309 0)" fill="#FF8181" />
+                                <rect x="76" width="122" height="153" fill="#FF3939" />
+                                <rect x="76" y="153" width="122" height="153" fill="#AD00FF" />
+                            </svg>
+                        </span>
+                    </a>
+                    <a href="https://github.com/marijapopeska/Magazine_home_page.git"
+                        class="home__social-icon text-3xl">
+                        <i class='bx bxl-github'></i>
+                    </a>
+                </div>
             </div>
 
             <div
@@ -347,26 +325,32 @@
                     <img class="w-full rounded-xl h-full object-cover overflow-hidden"
                         src="./assets/img/img-cinevers.jpg" alt="">
                 </div>
-                <a
-                    href="https://www.figma.com/file/u6L9r20XTE9HVRLWDdfkyg/CINEVERSE?type=design&node-id=11%3A1833&mode=design&t=w2JjjCUtIZEPv1Go-1">
-                    <span class="w-6">
-                        <svg width="30" height="30" viewBox="0 0 385 494" fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <rect width="154" height="153" rx="74.5" transform="matrix(-1 0 0 1 385 0)"
-                                fill="#FF8181" />
-                            <rect width="154" height="153" rx="74.5" transform="matrix(-1 0 0 1 352 153)"
-                                fill="#00D1FF" />
-                            <rect width="192" height="188" rx="94" transform="matrix(-1 0 0 1 198 306)"
-                                fill="#00FF19" />
-                            <rect width="103" height="107" transform="matrix(-1 0 0 1 198 306)" fill="#00FF19" />
-                            <rect width="154" height="153" rx="74.5" fill="#FF3939" />
-                            <rect y="153" width="154" height="153" rx="74.5" fill="#AD00FF" />
-                            <rect width="111" height="153" transform="matrix(-1 0 0 1 309 0)" fill="#FF8181" />
-                            <rect x="76" width="122" height="153" fill="#FF3939" />
-                            <rect x="76" y="153" width="122" height="153" fill="#AD00FF" />
-                        </svg>
-                    </span>
-                </a>
+                <div class="flex gap-6">
+                    <a
+                        href="https://www.figma.com/file/u6L9r20XTE9HVRLWDdfkyg/CINEVERSE?type=design&node-id=11%3A1833&mode=design&t=w2JjjCUtIZEPv1Go-1">
+                        <span class="w-6">
+                            <svg width="30" height="30" viewBox="0 0 385 494" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <rect width="154" height="153" rx="74.5" transform="matrix(-1 0 0 1 385 0)"
+                                    fill="#FF8181" />
+                                <rect width="154" height="153" rx="74.5" transform="matrix(-1 0 0 1 352 153)"
+                                    fill="#00D1FF" />
+                                <rect width="192" height="188" rx="94" transform="matrix(-1 0 0 1 198 306)"
+                                    fill="#00FF19" />
+                                <rect width="103" height="107" transform="matrix(-1 0 0 1 198 306)" fill="#00FF19" />
+                                <rect width="154" height="153" rx="74.5" fill="#FF3939" />
+                                <rect y="153" width="154" height="153" rx="74.5" fill="#AD00FF" />
+                                <rect width="111" height="153" transform="matrix(-1 0 0 1 309 0)" fill="#FF8181" />
+                                <rect x="76" width="122" height="153" fill="#FF3939" />
+                                <rect x="76" y="153" width="122" height="153" fill="#AD00FF" />
+                            </svg>
+                        </span>
+                    </a>
+                    <a href="https://github.com/marijapopeska/Cinevers_react_app.git"
+                        class="home__social-icon text-3xl">
+                        <i class='bx bxl-github'></i>
+                    </a>
+                </div>
             </div>
 
             <div
@@ -496,7 +480,7 @@
                 </div>
             </div>
             <hr class="my-6 border-gray-300 sm:mx-auto lg:my-8" />
-            <div class="sm:flex sm:items-center sm:justify-between">
+            <div class="sm:flex sm:items-center sm:justify-between align-middle">
                 <span class="text-sm text-gray-900 sm:text-center">© 2023 <a href="https://flowbite.com/"
                         class="hover:underline">Portfolio</a>. All Rights Reserved.
                 </span>
