Added grocery delivery app project

--- a/index.html
+++ b/index.html
@@ -82,12 +82,31 @@
                             class="absolute inset-0 hover:bg-[#793a34] hover:bg-opacity-50 transform duration-300 rounded-3xl">
                         </div>
                         <img class="w-full h-full bg-center object-cover rounded-3xl"
-                            src="./assets/img/hiking-club-img.jpg" alt="">
+                            src="./assets/img/dipsakus/hiking-club-img.jpg" alt="">
                     </div>
                 </article>
             </a>
             <!-- Project 2 -->
-
+            <a href="./pages/project-2.html">
+                <article class="flex flex-col justify-center text-center">
+                    <div>
+                        <h1
+                            class="mt-10 mb-6 text-3xl md:text-3xl lg:text-5xl font-futura max-xl:text-4xl max-sm:text-3xl text-slate-600">
+                            Grocery App</h1>
+                        <p class="text-slate-600 text-xl max-lg:text-lg">Designing an Intuitive Mobile App for Seamless
+                            Grocery Delivery Experience</p>
+                    </div>
+                    <div
+                        class="transform hover:-translate-y-2 mx-auto mt-6 md:mt-10 max-w-[700px] bg-cover bg-center h-[300px] md:h-[550px] lg:h-[550px] duration-500 cursor-pointer relative">
+                        <div class="absolute inset-0 bg-black opacity-50 rounded-3xl"></div>
+                        <div
+                            class="absolute inset-0 hover:bg-[#793a34] hover:bg-opacity-50 transform duration-300 rounded-3xl">
+                        </div>
+                        <img class="w-full h-full bg-center object-cover rounded-3xl"
+                            src="./assets/img/grocery-app/grocery-app.jpg" alt="">
+                    </div>
+                </article>
+            </a>
         </section>
 
     </section>
