--- a/pages/project-1.html
+++ b/pages/project-1.html
@@ -25,7 +25,7 @@
     <nav class="fixed top-0 w-full z-50 bg-white shadow-sm">
         <div class="flex items-center justify-between py-6 lg:px-[300px] md:px-[24px] px-[24px]">
             <a href="../index.html">
-                <img class="h-10 w-auto" src="../assets/img/m-logo.png" alt="">
+                <img class="h-10 w-auto" src="../assets/img/dipsakus/m-logo.png" alt="">
             </a>
             <div>
                 <ul class="text-base md:text-xl max-lg:text-lg flex flex-col md:flex-row md:gap-6">
@@ -68,8 +68,8 @@
                         comprehensive information about upcoming tours, past experiences, club news, and resources for
                         hiking enthusiasts.</p>
                     <a class="text-[#F36F64] underline" href="https://dipsakus.mk/">https://dipsakus.mk/</a>
-                    <img class="mt-10 h-[300px] md:h-[500px] w-full object-cover" src="../assets/img/unsplash_1.jpg"
-                        alt="">
+                    <img class="mt-10 h-[300px] md:h-[500px] w-full object-cover"
+                        src="../assets/img/dipsakus/unsplash_1.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -128,7 +128,7 @@
                         The interviews helped us understand what motivates users to join a hiking club, their
                         preferences for tour destinations and difficulty levels, and their expectations from the club's
                         website.</p>
-                    <img class="mt-10" src="../assets/img/questions.jpg" alt="">
+                    <img class="mt-10" src="../assets/img/dipsakus/dipsakus/questions.jpg" alt="">
                 </div>
                 <div>
                     <div>
@@ -139,9 +139,9 @@
                             Created fictional representations of typical users, including their goals, preferences, and
                             challenges related to hiking and club membership.</p>
                         <div class="flex justify-center mx-auto">
-                            <img class="mt-10 max-w-[calc(100%/3)]" src="../assets/img/user-1.png" alt="">
-                            <img class="mt-10 max-w-[calc(100%/3)]" src="../assets/img/user-2.png" alt="">
-                            <img class="mt-10 max-w-[calc(100%/3)]" src="../assets/img/user-3.png" alt="">
+                            <img class="mt-10 max-w-[calc(100%/3)]" src="../assets/img/dipsakus/user-1.png" alt="">
+                            <img class="mt-10 max-w-[calc(100%/3)]" src="../assets/img/dipsakus/user-2.png" alt="">
+                            <img class="mt-10 max-w-[calc(100%/3)]" src="../assets/img/dipsakus/user-3.png" alt="">
                         </div>
 
                         <div>
@@ -154,7 +154,7 @@
                                 and
                                 service.</p>
                             <div class="flex justify-center">
-                                <img class="mt-10" src="../assets/img/journey-map.jpg" alt="">
+                                <img class="mt-10" src="../assets/img/dipsakus/journey-map.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -172,7 +172,7 @@
                             their initial interaction with the website to the completion of specific tasks or actions.
                         </p>
                         <div class="mt-10">
-                            <img src="../assets/img/user-flow.jpg" alt="">
+                            <img src="../assets/img/dipsakus/user-flow.jpg" alt="">
                         </div>
 
                     </div>
@@ -185,7 +185,7 @@
                     exploring various
                     layouts and features. This process helps me visualize the website's structure and functionality
                     before moving on to digital wireframes and prototypes.</p>
-                <img class="mt-10" src="../assets/img/sketches.jpg" alt="">
+                <img class="mt-10" src="../assets/img/dipsakus/sketches.jpg" alt="">
             </div>
             <div class="px-0 md:px-10 lg:px-[200px] flex flex-col items-start justify-center text-start">
                 <h3 class="mt-10 mb-6 underline text-xl md:text-3xl font-futura lg:text-2xl text-slate-600">
@@ -204,8 +204,8 @@
                     <li>What would they like to improve?</li>
                     <li>Does the overall design/flow meet their needs?</li>
                 </ul>
-                <img class="mt-10" src="../assets/img/wireframes-1.jpg" alt="">
-                <img class="mt-10" src="../assets/img/wireframes-2.jpg" alt="">
+                <img class="mt-10" src="../assets/img/dipsakus/wireframes-1.jpg" alt="">
+                <img class="mt-10" src="../assets/img/dipsakus/wireframes-2.jpg" alt="">
             </div>
             <div class="px-0 md:px-10 lg:px-[200px] flex flex-col items-start justify-center text-start">
                 <h3 class="mt-10 mb-6 underline text-xl md:text-3xl font-futura lg:text-2xl text-slate-600">
@@ -217,10 +217,10 @@
                     articles, or user profiles, presented in a visually appealing and easily accessible format. Through
                     meticulous attention to detail and adherence to responsive design principles, I aimed to provide
                     users with a cohesive and engaging experience across all devices.</p>
-                <img class="mt-10" src="../assets/img/final-1.jpg" alt="">
-                <img class="mt-10" src="../assets/img/final-2.jpg" alt="">
-                <img class="mt-10" src="../assets/img/final-3.jpg" alt="">
-                <img class="mt-10" src="../assets/img/final-4.jpg" alt="">
+                <img class="mt-10" src="../assets/img/dipsakus/final-1.jpg" alt="">
+                <img class="mt-10" src="../assets/img/dipsakus/final-2.jpg" alt="">
+                <img class="mt-10" src="../assets/img/dipsakus/final-3.jpg" alt="">
+                <img class="mt-10" src="../assets/img/dipsakus/final-4.jpg" alt="">
                 <p class="mt-10 text-slate-600">I translated600e UX design concepts and wireframes into functional
                     components using
                     Next.js and
@@ -233,7 +233,7 @@
                     functionality. Together, we worked as a team to bring the Dipsakus Hiking Club website to life,
                     combining UX design principles with robust frontend development techniques to deliver a seamless
                     digital experience for users.</p>
-                <img class="mt-10" src="../assets/img/code.png" alt="">
+                <img class="mt-10" src="../assets/img/dipsakus/code.png" alt="">
 
             </div>
         </section>
