--- a/index.html
+++ b/index.html
@@ -107,6 +107,27 @@
                     </div>
                 </article>
             </a>
+            <!-- Project 3 -->
+            <a href="./pages/project-3.html">
+                <article class="flex flex-col justify-center text-center">
+                    <div>
+                        <h1
+                            class="mt-10 mb-6 text-3xl md:text-3xl lg:text-5xl font-futura max-xl:text-4xl max-sm:text-3xl text-slate-600">
+                            Cinevers</h1>
+                        <p class="text-slate-600 text-xl max-lg:text-lg">Exploring Cinematic Wonders: Cinevers - Your
+                            Gateway to the World of Movies</p>
+                    </div>
+                    <div
+                        class="transform hover:-translate-y-2 mx-auto mt-6 md:mt-10 max-w-[700px] bg-cover bg-center h-[300px] md:h-[550px] lg:h-[550px] duration-500 cursor-pointer relative">
+                        <div class="absolute inset-0 bg-black opacity-50 rounded-3xl"></div>
+                        <div
+                            class="absolute inset-0 hover:bg-[#793a34] hover:bg-opacity-50 transform duration-300 rounded-3xl">
+                        </div>
+                        <img class="w-full h-full bg-center object-cover rounded-3xl"
+                            src="./assets/img/cinevers/cinevers.jpg" alt="">
+                    </div>
+                </article>
+            </a>
         </section>
 
     </section>
