Added Design collection projects

--- a/index.html
+++ b/index.html
@@ -46,13 +46,12 @@
     <section id="about"
         class="top sticky top-0 w-full bg-[#F36F64] pt-[200px] pb-[250px] overflow-x-clip lg:px-[300px] md:px-[24px] px-[24px] -z-10">
         <div class="flex items-center justify-center text-center">
-            <div class=" w-full md:w-[60%] pr-14 max-2xl:pr-20 max-xl:pr-14 max-lg:pr-0" data-aos="fade-left"
-                data-aos-duration="700">
+            <div class=" lg:px-[300px] px-[24px] md:px-[24px]" data-aos="fade-left" data-aos-duration="700">
                 <h3
                     class="top mb-10 text-2xl md:text-3xl font-futura lg:text-5xl max-xl:text-4xl max-sm:text-3xl text-slate-50">
                     Hello, I'm <span>Marija Popeska</span>
                 </h3>
-                <p class="top text-xl max-lg:text-lg text-slate-50">
+                <p class="top text-[22px] max-lg:text-lg text-slate-50">
                     I'm a Product Designer & Frontend Developer who believes in the power of combining technology
                     and design to create something truly magical
                 </p>
@@ -63,71 +62,102 @@
 
     <!-- Work -->
 
-    <section id="work" class="bg-white space-y-20 lg:px-[300px] px-[24px] md:px-[24px] pt-1">
+    <section id="work" class="bg-white lg:px-[300px] px-[24px] md:px-[24px] pt-1">
         <section class="container space-y-20 mx-auto p-10 md:py-20 px-0 md:p-20 md:px-0 antialiased">
             <!-- Project 1 -->
-            <a href="./pages/project-1.html">
-                <article class="flex flex-col justify-center text-center">
-                    <div>
-                        <h1
-                            class="mt-10 mb-6 text-3xl md:text-3xl lg:text-5xl font-futura max-xl:text-4xl max-sm:text-3xl text-slate-600">
-                            Dipsakus</h1>
-                        <p class="text-slate-600 text-xl max-lg:text-lg">UX Design Case Study: Research, Design, and
-                            Development Journey</p>
-                    </div>
-                    <div
-                        class="transform hover:-translate-y-2 mx-auto mt-6 md:mt-10 max-w-[700px] bg-cover bg-center h-[300px] md:h-[550px] lg:h-[550px] duration-500 cursor-pointer relative">
-                        <div class="absolute inset-0 bg-black opacity-50 rounded-3xl"></div>
-                        <div
-                            class="absolute inset-0 hover:bg-[#793a34] hover:bg-opacity-50 transform duration-300 rounded-3xl">
+            <div>
+                <a href="./pages/project-1.html">
+                    <article class="flex flex-col justify-center text-center">
+                        <div>
+                            <h1
+                                class="mb-6 text-3xl md:text-3xl lg:text-5xl font-futura max-xl:text-4xl max-sm:text-3xl text-slate-600">
+                                Dipsakus</h1>
+                            <p class="text-slate-600 text-[22px] max-lg:text-lg">UX Design case study: research, design,
+                                and
+                                development journey</p>
                         </div>
-                        <img class="w-full h-full bg-center object-cover rounded-3xl"
-                            src="./assets/img/dipsakus/hiking-club-img.jpg" alt="">
-                    </div>
-                </article>
-            </a>
+                        <div
+                            class="transform hover:-translate-y-2 mx-auto mt-6 md:mt-10 max-w-[700px] bg-cover bg-center h-[300px] md:h-[550px] lg:h-[550px] duration-500 cursor-pointer relative">
+                            <div class="absolute inset-0 bg-black opacity-30 rounded-3xl"></div>
+                            <div
+                                class="absolute inset-0 hover:bg-[#793a34] hover:bg-opacity-50 transform duration-300 rounded-3xl">
+                            </div>
+                            <img class="w-full h-full bg-center object-cover rounded-3xl"
+                                src="./assets/img/dipsakus/hiking-club-img.jpg" alt="">
+                        </div>
+                    </article>
+                </a>
+            </div>
             <!-- Project 2 -->
-            <a href="./pages/project-2.html">
-                <article class="flex flex-col justify-center text-center">
-                    <div>
-                        <h1
-                            class="mt-10 mb-6 text-3xl md:text-3xl lg:text-5xl font-futura max-xl:text-4xl max-sm:text-3xl text-slate-600">
-                            Grocery App</h1>
-                        <p class="text-slate-600 text-xl max-lg:text-lg">Designing an Intuitive Mobile App for Seamless
-                            Grocery Delivery Experience</p>
-                    </div>
-                    <div
-                        class="transform hover:-translate-y-2 mx-auto mt-6 md:mt-10 max-w-[700px] bg-cover bg-center h-[300px] md:h-[550px] lg:h-[550px] duration-500 cursor-pointer relative">
-                        <div class="absolute inset-0 bg-black opacity-50 rounded-3xl"></div>
-                        <div
-                            class="absolute inset-0 hover:bg-[#793a34] hover:bg-opacity-50 transform duration-300 rounded-3xl">
+            <div>
+                <a href="./pages/project-2.html">
+                    <article class="flex flex-col justify-center text-center">
+                        <div>
+                            <h1
+                                class="mb-6 text-3xl md:text-3xl lg:text-5xl font-futura max-xl:text-4xl max-sm:text-3xl text-slate-600">
+                                Grocery App</h1>
+                            <p class="text-slate-600 text-[22px] max-lg:text-lg">Designing an intuitive mobile app for
+                                seamless grocery delivery experience</p>
                         </div>
-                        <img class="w-full h-full bg-center object-cover rounded-3xl"
-                            src="./assets/img/grocery-app/grocery-app.jpg" alt="">
-                    </div>
-                </article>
-            </a>
+                        <div
+                            class="transform hover:-translate-y-2 mx-auto mt-6 md:mt-10 max-w-[700px] bg-cover bg-center h-[300px] md:h-[550px] lg:h-[550px] duration-500 cursor-pointer relative">
+                            <div class="absolute inset-0 bg-black opacity-30 rounded-3xl"></div>
+                            <div
+                                class="absolute inset-0 hover:bg-[#793a34] hover:bg-opacity-50 transform duration-300 rounded-3xl">
+                            </div>
+                            <img class="w-full h-full bg-center object-cover rounded-3xl"
+                                src="./assets/img/grocery-app/grocery-app.jpg" alt="">
+                        </div>
+                    </article>
+                </a>
+            </div>
             <!-- Project 3 -->
-            <a href="./pages/project-3.html">
-                <article class="flex flex-col justify-center text-center">
-                    <div>
-                        <h1
-                            class="mt-10 mb-6 text-3xl md:text-3xl lg:text-5xl font-futura max-xl:text-4xl max-sm:text-3xl text-slate-600">
-                            Cinevers</h1>
-                        <p class="text-slate-600 text-xl max-lg:text-lg">Exploring Cinematic Wonders: Cinevers - Your
-                            Gateway to the World of Movies</p>
-                    </div>
-                    <div
-                        class="transform hover:-translate-y-2 mx-auto mt-6 md:mt-10 max-w-[700px] bg-cover bg-center h-[300px] md:h-[550px] lg:h-[550px] duration-500 cursor-pointer relative">
-                        <div class="absolute inset-0 bg-black opacity-50 rounded-3xl"></div>
-                        <div
-                            class="absolute inset-0 hover:bg-[#793a34] hover:bg-opacity-50 transform duration-300 rounded-3xl">
+            <div>
+                <a href="./pages/project-3.html">
+                    <article class="flex flex-col justify-center text-center">
+                        <div>
+                            <h1
+                                class="mb-6 text-3xl md:text-3xl lg:text-5xl font-futura max-xl:text-4xl max-sm:text-3xl text-slate-600">
+                                Cinevers</h1>
+                            <p class="text-slate-600 text-[22px] max-lg:text-lg">Cinevers -
+                                your gateway to the world of movies</p>
                         </div>
-                        <img class="w-full h-full bg-center object-cover rounded-3xl"
-                            src="./assets/img/cinevers/cinevers.jpg" alt="">
-                    </div>
-                </article>
-            </a>
+                        <div
+                            class="transform hover:-translate-y-2 mx-auto mt-6 md:mt-10 max-w-[700px] bg-cover bg-center h-[300px] md:h-[550px] lg:h-[550px] duration-500 cursor-pointer relative">
+                            <div class="absolute inset-0 bg-black opacity-30 rounded-3xl"></div>
+                            <div
+                                class="absolute inset-0 hover:bg-[#793a34] hover:bg-opacity-50 transform duration-300 rounded-3xl">
+                            </div>
+                            <img class="w-full h-full bg-center object-cover rounded-3xl"
+                                src="./assets/img/cinevers/cinevers.jpg" alt="">
+                        </div>
+                    </article>
+                </a>
+            </div>
+            <!-- Collection -->
+            <div>
+                <a href="./pages/collection.html">
+                    <article class="flex flex-col justify-center text-center">
+                        <div>
+                            <h1
+                                class="mb-6 text-3xl md:text-3xl lg:text-5xl font-futura max-xl:text-4xl max-sm:text-3xl text-slate-600">
+                                Design collection showcase</h1>
+                        </div>
+                        <p class="text-slate-600 text-[22px] max-lg:text-lg">
+                            Showcasing diverse projects and solutions
+                        </p>
+                        <div
+                            class="transform hover:-translate-y-2 mx-auto mt-6 md:mt-10 max-w-[700px] bg-cover bg-center h-[300px] md:h-[550px] lg:h-[550px] duration-500 cursor-pointer relative">
+                            <div class="absolute inset-0 bg-black opacity-20 rounded-3xl"></div>
+                            <div
+                                class="absolute inset-0 hover:bg-[#793a34] hover:bg-opacity-50 transform duration-300 rounded-3xl">
+                            </div>
+                            <img class="w-full h-full bg-center object-cover rounded-3xl"
+                                src="./assets/img/collection/img-1.jpg" alt="">
+                        </div>
+                    </article>
+                </a>
+            </div>
         </section>
 
     </section>
@@ -147,8 +177,7 @@
             </div>
             <hr class="my-3 border-gray-300 sm:mx-auto lg:my-8" />
             <div class="sm:flex sm:items-center sm:justify-between align-middle">
-                <span class="currentYear text- md:text-sm text-slate-600 sm:text-center"></span>
-                <div class="flex mt-4 sm:justify-center sm:mt-0">
+                <div class="flex mt-4 sm:justify-center sm:mt-0 order-2 mb-2 md:mb-0">
                     <ul class="flex gap-8 text-slate-800">
                         <li
                             class="opacity-70 hover:opacity-100 transition-all ease-in-out duration-300 hover:text-[#F36F64]">
@@ -179,6 +208,7 @@
                         </li>
                     </ul>
                 </div>
+                <span class="currentYear text-sm md:text-sm text-slate-600 mt-10 md:mt-0 sm:text-center order-1"></span>
             </div>
         </div>
     </footer>
