--- a/pages/project-1.html
+++ b/pages/project-1.html
@@ -20,7 +20,7 @@
         rel="stylesheet">
 </head>
 
-<body class="font-lato">
+<body class="font-lato text-base md:text-xl">
     <!-- Navbar -->
     <nav class="fixed top-0 w-full z-50 bg-white shadow-sm">
         <div class="flex items-center justify-between py-6 lg:px-[300px] md:px-[24px] px-[24px]">
@@ -56,7 +56,7 @@
             <div class="flex items-start justify-center text-start">
                 <div class=" px-0 md:px-10 lg:px-[200px]" data-aos="fade-left" data-aos-duration="700">
                     <h3
-                        class="mt-10 md:mt-32 mb-6 md:mb-10 text-2xl md:text-3xl font-futura lg:text-4xl text-slate-600">
+                        class="mt-10 md:mt-20 mb-6 md:mb-10 text-2xl md:text-3xl font-futura lg:text-4xl text-slate-600">
                         Introduction
                     </h3>
                     <p class="text-slate-600 mb-3">The Dipsakus hiking club website aims to provide a user-friendly
@@ -221,11 +221,10 @@
                 <img class="mt-10" src="../assets/img/dipsakus/final-2.jpg" alt="">
                 <img class="mt-10" src="../assets/img/dipsakus/final-3.jpg" alt="">
                 <img class="mt-10" src="../assets/img/dipsakus/final-4.jpg" alt="">
-                <p class="mt-10 text-slate-600">I translated600e UX design concepts and wireframes into functional
-                    components using
-                    Next.js and
-                    Tailwind CSS. Leveraging my frontend development skills, I implemented responsive layouts and
-                    interactive features to enhance user engagement and usability. Key tasks included structuring the
+                <p class="mt-10 text-slate-600">I translated UX design concepts and wireframes into functional
+                    components using Next.js and Tailwind CSS. Leveraging my frontend development skills, I implemented
+                    responsive layouts and interactive features to enhance user engagement and usability. Key tasks
+                    included structuring the
                     project, setting up routing, and integrating dynamic data from mock APIs. Additionally, I focused on
                     optimizing performance, adhering to best practices, and ensuring accessibility standards compliance.
                     Throughout the development process, I collaborated closely with my brother, an experienced software
@@ -247,7 +246,7 @@
                 <div>
                     <a href="./about.html" class="flex items-center">
                         <span
-                            class="self-center text-base md:text-xl max-lg:text-lg font-futura whitespace-nowrap text-[#F36F64]">Marija
+                            class="self-center text-base md:text-xl font-futura whitespace-nowrap text-[#F36F64]">Marija
                             Popeska</span>
                     </a>
                 </div>
