--- a/pages/about.html
+++ b/pages/about.html
@@ -43,18 +43,18 @@
     <section id="about" class="pt-[150px] md:pt-[200px] lg:pt-[200px] pb-[50px] lg:px-[300px] md:px-[24px] px-[24px]">
         <div>
             <div class="flex justify-center">
-                <div class="w-full md:w-[60%] pr-14 max-2xl:pr-20 max-xl:pr-14 max-lg:pr-0" data-aos="fade-left"
-                    data-aos-duration="700">
+                <div class="w-full md:w-full lg:w-[60%]  pr-14 max-2xl:pr-20 max-xl:pr-14 max-lg:pr-0"
+                    data-aos="fade-left" data-aos-duration="700">
                     <h3
                         class="mb-6 flex justify-center items-center text-center text-3xl md:text-3xl font-futura lg:text-5xl max-xl:text-4xl max-sm:text-3xl text-[#F36F64]">
                         Hello
                     </h3>
                     <p
-                        class="mb-10 flex justify-center items-center text-center space-y-6 mt-6 text-xl max-lg:text-lg text-slate-600">
+                        class="mb-10 flex justify-center items-center text-center space-y-6 mt-6 text-base md:text-xl text-slate-600">
                         I'm Marija Popeska, a friendly and
-                        collaborative product designer</p>
+                        collaborative Product designer</p>
                     <img src="../assets/img/hello.jpg" alt="">
-                    <div class="space-y-6 mt-6 text-xl max-lg:text-lg text-slate-600">
+                    <div class="space-y-6 mt-6 text-base md:text-xl text-slate-600">
                         <p>
                             Master of Architecture who transitioned into UX Design and Frontend
                             Development. I seamlessly merge my expertise in physical space design with digital
@@ -137,7 +137,7 @@
                 <div>
                     <a href="./about.html" class="flex items-center">
                         <span
-                            class="self-center text-base md:text-xl max-lg:text-lg font-futura whitespace-nowrap text-[#F36F64]">Marija
+                            class="self-center text-base md:text-xl font-futura whitespace-nowrap text-[#F36F64]">Marija
                             Popeska</span>
                     </a>
                 </div>
