--- a/pages/project-2.html
+++ b/pages/project-2.html
@@ -20,7 +20,7 @@
         rel="stylesheet">
 </head>
 
-<body class="font-lato">
+<body class="font-lato text-base md:text-xl">
     <!-- Navbar -->
     <nav class="fixed top-0 w-full z-50 bg-white shadow-sm">
         <div class="flex items-center justify-between py-6 lg:px-[300px] md:px-[24px] px-[24px]">
@@ -57,7 +57,7 @@
             <div class="flex items-start justify-center text-start">
                 <div class=" px-0 md:px-10 lg:px-[200px]" data-aos="fade-left" data-aos-duration="700">
                     <h3
-                        class="mt-10 md:mt-32 mb-6 md:mb-10 text-2xl md:text-3xl font-futura lg:text-4xl text-slate-600">
+                        class="mt-10 md:mt-20 mb-6 md:mb-10 text-2xl md:text-3xl font-futura lg:text-4xl text-slate-600">
                         Introduction
                     </h3>
                     <div class="text-slate-600 mb-3 space-y-6">
@@ -243,7 +243,7 @@
                 <div>
                     <a href="./about.html" class="flex items-center">
                         <span
-                            class="self-center text-base md:text-xl max-lg:text-lg font-futura whitespace-nowrap text-[#F36F64]">Marija
+                            class="self-center text-base md:text-xl font-futura whitespace-nowrap text-[#F36F64]">Marija
                             Popeska</span>
                     </a>
                 </div>
